<resources>
    <string name="app_name">Online Maintenance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Customer Name</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="location">Request Address</string>
    <string name="type">the device name</string>
    <string name="terms_conditions">Check the previous data and I want to send</string>
    <string name="signUp">maintenance order</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>


    <string name="password">password</string>
    <string name="manager_txt">manager</string>
    <string name="login_text">log in</string>
    <string name="national_id">National ID</string>
    <string name="managerName_txt">The manager name is empty</string>
    <string name="pass_empty">Your password is empty</string>
    <string name="id_empty">The national number is empty</string>
    <string name="check_manager_name">Make sure the manager name</string>
    <string name="check_manager_pass">Check your password</string>
    <string name="check_manager_id">Check the national number</string>
    <string name="quintity">quintity</string>
    
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="backdrop_title">Eleman maintenance center</string>
    <string name="backdrop_subtitle">All you want is one button </string>
    <string name="intro1">about us</string>
    <string name="home1">Simi Colon supports Eleman Center for device maintenance and this shows how to communicate with them</string>
    <string name="intro2">souq</string>
    <string name="home2">The screen shows the way to book any device and know the details of the product and the seller</string>
    <string name="intro3">spare parts</string>
    <string name="home3">The screen shows the way the parts are displayed and the possibility of booking and buying</string>
    <string name="intro4">book order</string>
    <string name="home4">Possibility to reserve a device or parts by entering data</string>
    <string name="intro5">maintenance</string>
    <string name="home5">Screen Maintenance is the possibility of maintaining any device by entering data only</string>
    <string name="mentainance">order</string>
    <string name="parts">spare parts</string>
    <string name="souq">souq</string>
    <string name="contact">contact us</string>
    <string name="about">about us</string>
    <string name="partner">Success Partners</string>
    <string name="manager">manager</string>
    <string name="register">register</string>
    <string name="detail">details</string>
    <string name="washers">Washers</string>
    <string name="Refrigerators">Refrigerators</string>
    <string name="Potgaz">Potgazat</string>
    <string name="screens">Screens</string>
    <string name="Televisions">Televisions</string>
    <string name="out">Out</string>
    <string name="watsup">WhatsApp </string>
    <string name="hot_line">hot line</string>
    <string name="address">Address</string>
    <string name="addresseman">El Batanoun - Beside Abouda El Ashmawy Mall </string>
    <string name="Section">Section</string>
    <string name="price">Price</string>
    <string name="cdata">Customer data </string>
    <string name="cname">name</string>
    <string name="device_data">device data</string>
    <string name="dtype">device type</string>
    <string name="guarantee">guarantee</string>
    <string name="date">date</string>
    <string name="damage">damage</string>
    <string name="dname">device name</string>
    <string name="category">category</string>
    <string name="loading">Loading....</string>
    <string name="noitem">There are no requests</string>
    <string name="marka">Device brand</string>
    <string name="internet">Check your Internet connection</string>
    <string name="in">Inside warranty</string>
    <string name="oute">outside warranty</string>
    <string name="state">state of warranty</string>
    <string-array name="warranty_array">
        <item>warranty</item>
        <item>Inside warranty</item>
        <item>outside warranty</item>

    </string-array>
    <string name="warranty_txt">warranty</string>
    <string name="ch_cn">Make sure you enter the customer name</string>
    <string name="ch_cph">Check phone number</string>
    <string name="ch_cph2">Be sure to enter the mobile number correctly</string>
    <string name="ch_cadrss">Be sure to enter the address</string>
    <string name="ch_dn">Be sure to enter the device name</string>
    <string name="ch_dws">Be sure to enter the device condition of the warranty</string>
    <string name="ch_ddt">Be sure to enter the type of damage</string>
    <string name="ch_dmarka">Be sure to insert the device brand</string>

    <string name="ch_qu">Make sure to enter the quantity</string>
    <string name="cancel_txt">Cancel</string>
    <string name="ok_txt">Ok</string>
    <string name="error_txt">Error while sending data </string>
    <string name="succ_txt">Data sent successfully</string>
    <string name="btn_ordertxt">Order</string>
    <string name="cadress">Customer address</string>
</resources>
