<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/user"
        android:drawablePadding="8dp"
        android:gravity="center|right"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />


    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/phone"
        android:drawablePadding="8dp"
        android:gravity="center|right"
        android:hint="@string/mobileNumber"
        android:inputType="phone"
        android:padding="10dp"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:maxLength="11"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/location"
        android:drawablePadding="8dp"
        android:gravity="center|right"
        android:hint="@string/location"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />



    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/confirm_password"
        android:drawablePadding="8dp"
        android:gravity="center|right"
        android:hint="@string/type"
        android:inputType="textAutoComplete"
        android:padding="10dp"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />
    <EditText
        android:id="@+id/marka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/confirm_password"
        android:drawablePadding="8dp"
        android:gravity="center|right"
        android:hint="@string/marka"
        android:inputType="textAutoComplete"
        android:padding="10dp"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />
    <Spinner
        android:id="@+id/mySpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:backgroundTint="@color/white"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/damage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center|right"
        android:hint="@string/damage"
        android:inputType="textAutoComplete"
        android:padding="10dp"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />


    <Button
        android:id="@+id/maintenance_order_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="registerOrder"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="27sp"
        android:textStyle="bold"

        />



</LinearLayout>

</ScrollView>