<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_color"
    tools:context="com.example.elashry.eleman.Activities.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/manager_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/manager_txt"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_below="@+id/manager_txt"
            android:layout_centerInParent="true"
            android:src="@mipmap/manager_icon"

            />
    </RelativeLayout>


    <EditText
        android:id="@+id/login_managerName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/user"
        android:drawablePadding="8dp"
        android:gravity="right|center"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />


    <EditText
        android:id="@+id/login_managerPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/confirm_password"
        android:drawablePadding="8dp"
        android:gravity="right|center"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"

        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />
    <EditText
        android:id="@+id/login_managerId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/confirm_password"
        android:drawablePadding="8dp"
        android:gravity="right|center"
        android:hint="@string/national_id"
        android:inputType="number"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingRight="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember Me"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            />
        <CheckBox
            android:id="@+id/login_managerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_10dp"
            app:buttonTint="@color/background_color"
            android:layout_gravity="top"

            />

    </LinearLayout>
    <Button
        android:id="@+id/login_Btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/login_text"
        android:drawableRight="@mipmap/manager_icon"
        android:background="@color/white"
        android:textStyle="bold"
        android:textColor="@color/background_color"
        />
</LinearLayout>
